--- a/environment.yaml
+++ b/environment.yaml
@@ -20,7 +20,7 @@ dependencies:
       - pypinyin==0.39.0
       - pyworld==0.3.3
       - PyYAML==5.4.1
-      - streamlit
+      - streamlit==1.24.0
       - scikit-learn==0.24.1
       - scipy==1.5.0
       - soundfile==0.10.3.post1
