--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -8,3 +8,6 @@ inference_config:
     energy_control: 1.0
     duration_control: 1.0
     speaker_id: 0
+stats:
+    phone_stats: "/work/tc046/tc046/lordzuko/work/speech-editor/conf/phone_stats.json"
+    global_stats: "/work/tc046/tc046/lordzuko/work/speech-editor/conf/global_stats.json"
