--- a/environment.yaml
+++ b/environment.yaml
@@ -1,38 +1,41 @@
-name: se
+name: se_daft
 channels:
   - default
   - conda-forge
   - anaconda
 dependencies:
-  - python=3.8.16
-  - conda-build
-  - cxx-compiler
-  - pip
-  - librosa=0.7.2
-  - numba=0.48
-  - numpy=1.23.0
-  - dask
-  - pynini==2.1.4
-  - pip:
-      - g2p-en==2.1.0
-      - inflect==4.1.0
-      - matplotlib==3.2.2
-      - pypinyin==0.39.0
-      - pyworld==0.3.3
-      - PyYAML==5.4.1
-      - streamlit==1.24.0
-      - scikit-learn==0.24.1
-      - scipy==1.5.0
-      - soundfile==0.10.3.post1
-      - tgt==1.4.4
-      - torch==1.7.0
-      - tqdm==4.46.1
-      - unidecode==1.1.1
-      - pillow==9.5.0
-      - protobuf==3.20.*
-      - pymongo[srv]==3.11.0
-      - mongoengine==0.23.0
-      - streamlit-tags==1.2.8
-      - python-dotenv
-      - st_row_buttons
-      - st_btn_select
+- pip
+- python=3.8.16
+- conda-build
+- cxx-compiler
+- librosa=0.7.2
+- numba=0.48
+- numpy=1.23.0
+- dask
+- pynini==2.1.4
+- baumwelch
+- ngram
+- openblas
+- openfst
+- pip:
+  - inflect==5.3.0
+  # - librosa==0.7.2
+  - matplotlib == 3.4.3
+  - montreal-forced-aligner == 2.0.0a24
+  - python-dateutil == 2.8.2
+  - tgt == 1.4.4
+  - unidecode == 1.2.0
+  - resampy==0.3.1
+  - Pillow==9.5.0
+  - setuptools==59.5.0
+  # - torch==1.9.0
+  # - torchaudio==0.9.0
+  - tensorboard==2.13.0
+  - jupyter
+  - pyworld==0.3.3
+  - pymongo[srv]==3.11.0
+  - mongoengine==0.23.0
+  - python-dotenv
+  - streamlit==1.24.0
+  - scikit-learn==1.2.2
+  - scipy==1.5.0
