--- a/environment.yaml
+++ b/environment.yaml
@@ -28,8 +28,8 @@ dependencies:
   - resampy==0.3.1
   - Pillow==9.5.0
   - setuptools==59.5.0
-  # - torch==1.9.0
-  # - torchaudio==0.9.0
+  - torch==1.9.0
+  - torchaudio==0.9.0
   - tensorboard==2.13.0
   - jupyter
   - pyworld==0.3.3
