added UI and texts for experiment

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -15,7 +15,13 @@ ref_style:
     style4: "/home/lordzuko/work/speech-editor/assets/ref_style/CB-FFM-31-47.wav"
     style5: "/home/lordzuko/work/speech-editor/assets/ref_style/CB-LCL-12-167.wav"
 text: 
-    text1: "The minutes passed very slowly: fifteen were counted before the library- door again opened."
-    text2: "She felt immediately that she should like him;"
-    text3: "Gabriel, will you stay on with me?"
-    text4: "I am sure, a month ago, I had no more idea myself!"
+    text1: "The time passed very slowly"
+    text2: "She immediately liked him"
+    text3: "Gabriel, will you stay?"
+    text4: "Such a sad loss!"
+
+
+
+
+
+
